news/css/style.css
@import url(https://fonts.bunny.net/css?family=open-sans:300,400);

:root {
    background-color: #555;
    font-size: 32px;
    color: #fff;
    font-family: "Open Sans";
    font-weight: 300;
}

#background-image {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100svw;
    height: 100svh;
}

.ui {
    background-color: rgba(0, 0, 0, 0.60);
    border: 0.125rem solid #000;
    backdrop-filter: blur(0.125rem);
}

.bold {
    font-weight: 400;
}

.video-page-body {
    overflow: hidden;
}

a {
    text-decoration: none;
    color: #fff;
}


/* Progress indicator */
#progress-indicator {
    display: grid;
    margin-bottom: 0.25rem;
}

#logo-wrapper {
    display: grid;
    grid-template-rows: 4fr 1fr;
    font-weight: 300;
    text-align: center;
}

#logo {
    place-self: center;
}

#progress-bars {
    display: flex;
    flex-direction: column;
    margin-bottom: 0.5rem;
    margin-right: 0.5rem;
}

#progress-bars>div {
    position: relative;
    flex-grow: 1;
    margin: 0.25rem;
}

#progress-bars>div>.bar {
    position: absolute;
    left: 0px;
    bottom: 0px;
    width: 100%;
    height: 0.125rem;
    background-color: rgba(255, 255, 255, 0.25);
}

#progress-bars>div>.name {
    float: left;
}

#progress-bars>div>.progress {
    float: right;
}

.bar>.bar-fill {
    position: absolute;
    left: 0px;
    bottom: 0px;
    height: 100%;
    background-color: #fff;
}


/* Episode list */
.episode {
    position: relative;
    display: grid;
    grid-template-columns: 1fr 2fr;
    margin-top: 0.125rem;
}

.episode>img {
    width: 100%;
    grid-row: span 2;
    aspect-ratio: 16/9;
    border-right: 0.0625rem solid #000;
}

.episode>div {
    padding-left: 0.375rem;
}

.episode>div>.title {
    font-weight: 300;
}

.episode>div>.description {
    font-size: 0.67rem;
    margin-right: 0.25rem;
}


/* Video player */
#bottom-bar {
    position: absolute;
    display: grid;
    grid-template-columns: 1.6rem 1fr 1.6rem 1.6rem;
    column-gap: 0.125rem;
    left: 0.25rem;
    bottom: -2rem;
    width: calc(100svw - 0.5rem);
    user-select: none;
    -webkit-user-select: none;
    transition: bottom 0.2s;
}

#bottom-bar.active {
    bottom: 0.25rem;
}

#video-wrapper {
    position: absolute;
    display: flex;
    left: 0px;
    top: 0px;
    width: 100svw;
    height: 100svh;
    align-items: center;
    justify-content: center;
    background-color: #000;
}

#video-container {
    position: relative;
    min-width: 100vmin;
    min-height: 100vmin;
    aspect-ratio: 16/9;
}

#next-video,
#current-video {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
}

#bottom-bar>div,
#bottom-bar>button {
    height: 1.35rem;
    line-height: 1.35rem;
}

#bottom-bar>button {
    height: 1.6rem;
}

#video-bar-text-left {
    float: left;
}

#video-bar-text-right {
    float: right;
}

#video-bar-fill {
    backdrop-filter: invert(100%);
    position: absolute;
    left: 0px;
    top: 0px;
    width: 0%;
    height: 100%;
    transition: width 0.15s;
}

#play-button {
    position: relative;
}

#play-button-icon {
    position: absolute;
    display: flex;
    flex-direction: row;
    left: 20%;
    top: 10%;
    width: 60%;
    height: 80%;
    clip-path: polygon(0px 0px, 100% 0px, 100% 100%, 0px 100%);
    transition: clip-path 0.2s;
}

#play-button-icon>div:nth-child(1),
#play-button-icon>div:nth-child(3) {
    flex-grow: 1;
    background-color: #fff;
    transition: flex-grow 0.2s;
}

#play-button-icon>div:nth-child(2) {
    flex-grow: 1;
    background-color: transparent;
    transition: flex-grow 0.2s;
}

#play-button-icon.paused {
    clip-path: polygon(0px 0px, 100% 50%, 100% 50%, 0px 100%);
}

#play-button-icon.paused>div:nth-child(2) {
    flex-grow: 0;
}

#volume-btn {
    position: relative;
}

#volume-slider {
    position: absolute;
    left: -0.125rem;
    bottom: calc(100% + 0.25rem);
    width: 100%;
    height: 500%;
    transform: translateY(33.33%);
    opacity: 0;
    pointer-events: none;
    transition: transform 0.2s, opacity 0.2s;
}

#volume-slider>input {
    writing-mode: vertical-lr;
    direction: rtl;
    height: calc(100% - 0.125rem);
}

#volume-slider.active {
    transform: none;
    opacity: 1;
    pointer-events: all;
}

.icon-fill {
    position: absolute;
    left: 10%;
    top: 10%;
    width: 80%;
    height: 80%;
    object-fit: cover;
}


/* FREAK SAFARI */
#freak-safari {
    position: absolute;
    left: 0px;
    top: 0px;
    width: calc(100% - 2rem);
    height: 100%;
    background-color: rgba(0, 0, 0, 0.60);
    backdrop-filter: blur(1rem);
    padding: 1rem;
    font-family: "Open Sans";
    z-index: 99;
}

#freak-safari>h1 {
    font-weight: 300;
}

#freak-safari>p {
    font-weight: 400;
}

/* Mobile */
@media screen and (max-width: 100svh) {
    :root {
        font-size: 7vmin;
    }

    #progress-indicator {
        grid-template-rows: 100svw 1fr;
    }

    #logo-wrapper>div {
        font-size: 1.4rem;
    }

    #progress-bars {
        margin-left: 0.5rem;
    }
}


/* Desktop */
@media screen and (min-width: 100svh) {
    .episode,
    #progress-indicator {
        margin-left: 10svw;
        margin-right: 10svw;
    }

    #progress-indicator {
        grid-template-columns: 10rem 1fr;
        height: 10rem;
        margin-top: calc(50svh - 5.25rem);
    }

    #logo {
        height: 6.4rem;
    }
}

